--- a/willylistapp/static/css/style.css
+++ b/willylistapp/static/css/style.css
@@ -5,11 +5,11 @@ body {
 }
 
 .bg-blue {
-  background-color: #3F3F63;
+  background-color: #FF9D05;
 }
 
 .bg-gray {
-  background-color: #88A1B2;
+  background-color: #BBBCBD; /*#88A1B2;*/
 }
 
 .text-white {
@@ -18,7 +18,7 @@ body {
 
 .btn-pink {
   color: white;
-  background-color: #EE5462;
+  background-color: #ef4e49; /*#EE5462;*/
 }
 
 .btn-pink:hover,
@@ -34,7 +34,7 @@ body {
   top: 0;
   left: 0;
   padding: 0;
-  background-color: #3F3F63;
+  background-color: #FF9D05;
   overflow: auto;
 }
 
@@ -43,25 +43,25 @@ body {
   padding: 30px 10px;
   font-weight: bold;
   font-size: 15px;
-  background-color: #383957;
+  background-color: #C36F12;
 }
 
 .sidebar > div:first-child > h4 {
-  color: #e0deeb;
+  color: #EDF2F5; /*#e0deeb;*/
 }
 
 .sidebar > div:first-child > h5 {
-  color: #b6b4c1;
+  color: #3F2815; /*#b6b4c1;*/
 }
 
 /* SIDE BAR - LIST */
 .sidebar .list-group {
   padding: 0;
-  background-color: #3F3F63;
+  background-color: #FF9D05;
 }
 
 .sidebar .list-group > span {
-  color: #b6b4c1;
+  color: #3F2815; /*#b6b4c1;*/
   display: block;
   margin-top: 20px;
   padding: 20px 30px;
@@ -71,8 +71,8 @@ body {
 
 .sidebar .list-group .list-group-item,
 .sidebar .list-group .list-group-item:focus {
-  background-color: #3F3F63;
-  color: #b6b4c1;
+  background-color: #FF9D05;
+  color: #3F2815; /*#b6b4c1;*/
   border: 0;
   padding-left: 60px;
   padding-right: 30px;
@@ -80,8 +80,8 @@ body {
 
 .sidebar .list-group .list-group-item.active,
 .sidebar .list-group .list-group-item:hover {
-  background-color: #383957;
-  color: #e0deeb;
+  background-color: #C36F12;
+  color: #EDF2F5; /*#e0deeb;*/
 }
 
 .sidebar .list-group .list-group-item:first-child {
@@ -91,8 +91,8 @@ body {
 
 .sidebar .list-group .list-group-item .badge,
 .sidebar .list-group .list-group-item.active .badge {
-  background-color: #EE5462;
-  color: #e0deeb;
+  background-color: #ef4e49; /*#EE5462;*/
+  color: #EDF2F5; /*#e0deeb;*/
 }
 
 /* SIDE BAR - LOGOUT */
@@ -120,5 +120,5 @@ body {
 
 .table,
 .table > thead > tr > th {
-  border-color: #88A1B2
+  border-color: #BBBCBD; /*#88A1B2*/
 }
