--- a/willylistapp/templates/restaurant/report.html
+++ b/willylistapp/templates/restaurant/report.html
@@ -57,8 +57,8 @@
                             datasets: [
                                 {
                                     label: "Revenue by Week",
-                                    backgroundColor: "rgba(255,99,132,0.9)",
-                                    hoverBackgroundColor: "rgba(255,99,132,1)",
+                                    backgroundColor: "rgba(53, 198, 126, 0.9)",
+                                    hoverBackgroundColor: "rgba(53, 198, 126 ,1)",
                                     data: {{ orders }}
                                 }
                             ]
